# print-manager

./: .contextProperties.ini  .gitignore  .kde-ci.yml  70-cupspkhelper.rules  CMakeLists.txt  Messages.sh  README  README.md  config.h.cmake  org.kde.print-manager.metainfo.xml
NewPrinterNotification/: CMakeLists.txt  NewPrinterNotification.cpp  NewPrinterNotification.notifyrc  newprinternotification.desktop
add-printer/: AddPrinter.cpp  AddPrinter.h  AddPrinterAssistant.cpp  AddPrinterAssistant.h  AddPrinterInterface.cpp  AddPrinterInterface.h  CMakeLists.txt  ChooseIpp.cpp  ChooseIpp.h  ChooseIpp.ui  ChooseLpd.cpp  ChooseLpd.h  ChooseLpd.ui  ChoosePrinters.cpp  ChoosePrinters.h  ChoosePrinters.ui  ChooseSamba.cpp  ChooseSamba.h  ChooseSamba.ui  ChooseSerial.cpp  ChooseSerial.h  ChooseSerial.ui  ChooseSocket.cpp  ChooseSocket.h  ChooseSocket.ui  ChooseUri.cpp  ChooseUri.h  ChooseUri.ui  DevicesModel.cpp  DevicesModel.h  GenericPage.cpp  GenericPage.h  Messages.sh  PageAddPrinter.cpp  PageAddPrinter.h  PageAddPrinter.ui  PageChoose.cpp  PageChoose.h  PageChoosePPD.cpp  PageChoosePPD.h  (+21 more)
configure-printer/: CMakeLists.txt  ConfigureDialog.cpp  ConfigureDialog.h  ConfigurePrinter.cpp  ConfigurePrinter.h  ConfigurePrinterInterface.cpp  ConfigurePrinterInterface.h  Debug.cpp  Debug.h  ModifyPrinter.cpp  ModifyPrinter.h  ModifyPrinter.ui  PrinterBehavior.cpp  PrinterBehavior.h  PrinterBehavior.ui  PrinterOptions.cpp  PrinterOptions.h  PrinterOptions.ui  PrinterPage.cpp  PrinterPage.h  SelectMakeModelDialog.cpp  SelectMakeModelDialog.h  main.cpp  org.kde.ConfigurePrinter.desktop  org.kde.ConfigurePrinter.service.in  org.kde.ConfigurePrinter.xml
declarative-plugins/: CMakeLists.txt  qmldir  qmlplugins.cpp  qmlplugins.h
libkcups/: CMakeLists.txt  ClassListWidget.cpp  ClassListWidget.h  Debug.cpp  Debug.h  JobModel.cpp  JobModel.h  JobSortFilterModel.cpp  JobSortFilterModel.h  KCupsConnection.cpp  KCupsConnection.h  KCupsJob.cpp  KCupsJob.h  KCupsPasswordDialog.cpp  KCupsPasswordDialog.h  KCupsPrinter.cpp  KCupsPrinter.h  KCupsRequest.cpp  KCupsRequest.h  KCupsServer.cpp  KCupsServer.h  KIppRequest.cpp  KIppRequest.h  KIppRequest_p.h  NoSelectionRectDelegate.cpp  NoSelectionRectDelegate.h  PPDModel.cpp  PPDModel.h  PrintQueueModel.cpp  PrintQueueModel.h  PrinterModel.cpp  PrinterModel.h  PrinterSortFilterModel.cpp  PrinterSortFilterModel.h  ProcessRunner.cpp  ProcessRunner.h  SelectMakeModel.cpp  SelectMakeModel.h  SelectMakeModel.ui
libqcups/: CMakeLists.txt  ClassListWidget.cpp  ClassListWidget.h  ConfigureDialog.cpp  ConfigureDialog.h  CupsPasswordDialog.cpp  CupsPasswordDialog.h  KCupsConnection.cpp  KCupsConnection.h  KCupsJob.cpp  KCupsJob.h  KCupsPasswordDialog.h  KCupsPrinter.cpp  KCupsPrinter.h  KCupsRequest.cpp  KCupsRequest.h  KCupsRequestInterface.cpp  KCupsRequestInterface.h  KCupsRequestJobs.cpp  KCupsRequestJobs.h  KCupsRequestPrinters.cpp  KCupsRequestPrinters.h  KCupsRequestServer.cpp  KCupsRequestServer.h  KCupsServer.cpp  KCupsServer.h  ModifyPrinter.cpp  ModifyPrinter.h  ModifyPrinter.ui  PPDModel.cpp  PPDModel.h  PrinterBehavior.cpp  PrinterBehavior.h  PrinterBehavior.ui  PrinterOptions.cpp  PrinterOptions.h  PrinterOptions.ui  PrinterPage.cpp  PrinterPage.h  QCups.cpp  (+10 more)
plasmoid/: CMakeLists.txt  KPrintManagerConfigPlugin.cpp  KPrintManagerConfigPlugin.h  PlasmoidConfig.cpp  PlasmoidConfig.h  PlasmoidConfig.ui  plasma-applet-printmanager.desktop  printmanager.cpp  printmanager.h
plasmoid/package/: metadata.desktop  metadata.json
print-manager-kded/: CMakeLists.txt  Debug.cpp  Debug.h  NewPrinterNotification.cpp  NewPrinterNotification.h  PrintManagerKded.cpp  PrintManagerKded.h  printmanager.desktop  printmanager.json  printmanager.notifyrc
printd/: CMakeLists.txt  PrintQueueTray.cpp  PrintQueueTray.h  printd.cpp  printd.desktop  printd.h
printer-manager-kcm/: CMakeLists.txt  Messages.sh  PrintKCM.cpp  PrintKCM.h  PrintKCM.ui  PrinterDelegate.cpp  PrinterDelegate.h  PrinterDescription.cpp  PrinterDescription.h  PrinterDescription.ui  PrinterModel.cpp  PrinterModel.h  ServerError.ui  SystemPreferences.cpp  SystemPreferences.h  SystemPreferences.ui  kcm_printer_manager.desktop  kcm_printer_manager.json  printer.cpp  printer.h
printers-dataengine/: CMakeLists.txt  PrintersEngine.cpp  PrintersEngine.h  PrintersService.cpp  PrintersService.h  PrintersServiceJob.cpp  PrintersServiceJob.h  plasma-engine-printers.desktop  printers.operations
printjobs-dataengine/: CMakeLists.txt  PrintJobsEngine.cpp  PrintJobsEngine.h  PrintJobsService.cpp  PrintJobsService.h  PrintJobsServiceJob.cpp  PrintJobsServiceJob.h  plasma-engine-printjobs.desktop  printjobs.operations
printkcm/: CMakeLists.txt  PrintKCM.cpp  PrintKCM.h  PrintKCM.ui  PrinterDescription.cpp  PrinterDescription.ui  PrinterModel.h  printer-manager.desktop  settings-hardware.desktop
printmanager-dataengine/: CMakeLists.txt  PrintManagerEngine.cpp  PrintManagerEngine.h  PrintManagerService.cpp  PrintManagerService.h  PrintManagerServiceJob.cpp  PrintManagerServiceJob.h  plasma-engine-printmanager.desktop  printmanager.operations
printqueue/: CMakeLists.txt  PrintQueue.cpp  PrintQueue.h  PrintQueue.notifyrc  PrintQueueInterface.cpp  PrintQueueInterface.h  PrintQueueModel.cpp  PrintQueueModel.h  PrintQueueSortFilterProxyModel.cpp  PrintQueueSortFilterProxyModel.h  PrintQueueUi.cpp  PrintQueueUi.h  PrintQueueUi.ui  main.cpp  org.kde.PrintQueue.desktop  org.kde.PrintQueue.service.in  org.kde.PrintQueue.xml
src/add-printer/: AddPrinter.cpp  AddPrinter.h  AddPrinterAssistant.cpp  AddPrinterAssistant.h  CMakeLists.txt  ChooseLpd.cpp  ChooseLpd.h  ChooseSamba.cpp  ChooseSamba.h  ChooseSerial.cpp  ChooseSerial.h  ChooseSocket.cpp  ChooseSocket.h  ChooseUri.cpp  ChooseUri.h  DevicesModel.cpp  main.cpp  (+12 more)
tests/: CMakeLists.txt  TestHelpers.h  add-printers.sh  attributetest.cpp  callkcmtest.cpp  callkcmtests.cpp  commandtest.cpp  cupsservertests.cpp  devicemodeltests.cpp  kdedtest.cpp  kdedtests.cpp  modeltest.cpp  modeltests.cpp  notifystatustest.cpp  servertest.cpp  start-test-server.sh  subscriptiontest.cpp
(+398 files in other folders)
